# scfunding

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
app/: README.md  data.py  main.py
app/components/: header.py  page_config.py  topline_statistics.py
app/pages/: 2_advanced.py  3_trivia.py  4_modelling.py  5_about.py
app/src/: config.yaml  palettes.yaml  utils.py
app/src/loading/: combined_signals.py  loader.py  models.py  time_series.py
app/src/modelling/: possible_features.yaml  train.py
app/src/stats/: correlations.py  observations.py
app/src/visuals/: charts.py
test/data/: Crowdfunding Development Spreadsheet Version 3.0 - Sales & Comments.csv
